force-app/main/default/objects/Credit_Rating__mdt/Credit_Rating__mdt.object-meta.xml
<CustomObject>
    <label>Credit Rating</label>
    <pluralLabel>Credit Rating</pluralLabel>
</CustomObject>