force-app/main/default/objects/Credit_Rating__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>