force-app/main/default/objects/Credit_Rating__mdt/fields/Credit_Score_Max__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Max__c</fullName>
    <label>Credit Score Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>