force-app/main/default/objects/Credit_Rating__mdt/fields/Credit_Score_Min__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Min__c</fullName>
    <label>Credit Score Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>